Fix textarea size on mobile

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -148,7 +148,7 @@ span:hover {
 
   #registerForm, #loginForm {
     font-size: xx-large!important;
-    input {
+    input, textarea {
     line-height: 100px !important;
     font-size: 50px !important;
     }
